test/expected/strict_glob_unmatched.out
[CompoundList]
  [CompoundListCondition, None]
    [SimpleCommand "echo" "before"]
  [CompoundListCondition, None]
    [SimpleCommand "echo" "*.zzz_no_such_glob"]
  [CompoundListCondition, None]
    [SimpleCommand "echo" "not-reached"]
[Word
  Unquoted "echo"
]
[Word
  Unquoted "before"
]
[Word
  Unquoted "echo"
]
[Word
  Unquoted "*.zzz_no_such_glob"
]
[Word
  Unquoted "echo"
]
[Word
  Unquoted "not-reached"
]
before
shit: 3:6: error: The glob pattern '*.zzz_no_such_glob' matched no file, it expands to its literal text, which is rarely intended.
     3 |  echo *.zzz_no_such_glob
       |       ^~~~~~~~~~~~~~~~~~ here.
note: Probe for matches with compgen -G '*.zzz_no_such_glob' or relax with set +o failglob.
